--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Folders
+kubebuilder
+.idea
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -12,4 +15,4 @@
 *.out
 
 # Ignore the built binary
-cert-manager-webhook-example
+cert-manager-webhook-hetzner
