--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Folders
 kubebuilder
-.idea
-.idea/*
+.idea/
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -16,4 +15,4 @@ kubebuilder
 *.out
 
 # Ignore the built binary
-cert-manager-webhook-hetzner
+#cert-manager-webhook-hetzner
