--- a/deploy/cert-manager-webhook-hetzner/templates/pki.yaml
+++ b/deploy/cert-manager-webhook-hetzner/templates/pki.yaml
@@ -1,7 +1,7 @@
 ---
 # Create a selfsigned Issuer, in order to create a root CA certificate for
 # signing webhook serving certificates
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   name: {{ include "cert-manager-webhook-hetzner.selfSignedIssuer" . }}
@@ -17,7 +17,7 @@ spec:
 ---
 
 # Generate a CA Certificate used to sign certificates for the webhook
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: {{ include "cert-manager-webhook-hetzner.rootCACertificate" . }}
@@ -38,7 +38,7 @@ spec:
 ---
 
 # Create an Issuer that uses the above generated CA certificate to issue certs
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   name: {{ include "cert-manager-webhook-hetzner.rootCAIssuer" . }}
@@ -55,7 +55,7 @@ spec:
 ---
 
 # Finally, generate a serving certificate for the webhook to use
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: {{ include "cert-manager-webhook-hetzner.servingCertificate" . }}
@@ -71,6 +71,6 @@ spec:
   issuerRef:
     name: {{ include "cert-manager-webhook-hetzner.rootCAIssuer" . }}
   dnsNames:
-  - {{ include "cert-manager-webhook-hetzner.fullname" . }}
-  - {{ include "cert-manager-webhook-hetzner.fullname" . }}.{{ .Release.Namespace }}
-  - {{ include "cert-manager-webhook-hetzner.fullname" . }}.{{ .Release.Namespace }}.svc
+    - {{ include "cert-manager-webhook-hetzner.fullname" . }}
+    - {{ include "cert-manager-webhook-hetzner.fullname" . }}.{{ .Release.Namespace }}
+    - {{ include "cert-manager-webhook-hetzner.fullname" . }}.{{ .Release.Namespace }}.svc
