feat: more information in readme and consistent default values

--- a/deploy/cert-manager-webhook-hetzner/values.yaml
+++ b/deploy/cert-manager-webhook-hetzner/values.yaml
@@ -6,7 +6,7 @@
 # solve the DNS01 challenge.
 # This group name should be **unique**, hence using your own company's domain
 # here is recommended.FROM golang:1.14.0-alpine AS build_deps
-groupName: acme.unique.company.name
+groupName: acme.yourdomain.tld
 
 certManager:
   namespace: cert-manager
