fix date format

--- a/deploy/cert-manager-webhook-hetzner/templates/pki.yaml
+++ b/deploy/cert-manager-webhook-hetzner/templates/pki.yaml
@@ -29,7 +29,7 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   secretName: {{ include "cert-manager-webhook-hetzner.rootCACertificate" . }}
-  duration: 43800h # 5y
+  duration: 43800h0m0s # 5y
   issuerRef:
     name: {{ include "cert-manager-webhook-hetzner.selfSignedIssuer" . }}
   commonName: "ca.cert-manager-webhook-hetzner.cert-manager"
@@ -67,7 +67,7 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   secretName: {{ include "cert-manager-webhook-hetzner.servingCertificate" . }}
-  duration: 8760h # 1y
+  duration: 8760h0m0s # 1y
   issuerRef:
     name: {{ include "cert-manager-webhook-hetzner.rootCAIssuer" . }}
   dnsNames:
