--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,4 @@ kubebuilder
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Ignore the built binary
-cert-manager-webhook-hetzner
+pkg/
