--- a/deploy/cert-manager-webhook-hetzner/values.yaml
+++ b/deploy/cert-manager-webhook-hetzner/values.yaml
@@ -10,7 +10,7 @@ groupName: acme.yourdomain.tld
 
 certManager:
   namespace: cert-manager
-  serviceAccountName: cert-manager-controller
+  serviceAccountName: cert-manager
 
 image:
   repository: zmejg/cert-manager-webhook-hetzner
