--- a/deploy/cert-manager-webhook-hetzner/Chart.yaml
+++ b/deploy/cert-manager-webhook-hetzner/Chart.yaml
@@ -1,5 +1,21 @@
-apiVersion: v1
-appVersion: "1.3.0"
-description: Allow cert-manager to solve DNS challenges using Hetzner DNS API
+apiVersion: v2
 name: cert-manager-webhook-hetzner
-version: 1.3.0
+version: 1.3.1
+appVersion: "1.3.0"
+kubeVersion: ">= 1.22.0-0"
+description: Allow cert-manager to solve DNS challenges using Hetzner DNS API
+home: https://github.com/vadimkim/cert-manager-webhook-hetzner
+icon: https://raw.githubusercontent.com/cert-manager/cert-manager/master/logo/logo-small.png
+keywords:
+  - cert-manager
+  - hetzner
+  - kube-lego
+  - letsencrypt
+  - tls
+sources:
+  - https://github.com/vadimkim/cert-manager-webhook-hetzner
+maintainers:
+  - name: vadimkim
+    email: vadim@ant.ee
+annotations:
+  artifacthub.io/license: Apache-2.0
