Restrict PR CI jobs to relevant changes
Signed-off-by: Mario Trangoni <mjtrangoni@gmail.com>

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -4,6 +4,11 @@ on:
     branches:
       - master
   pull_request:
+    paths:
+      - '**.go'
+      - '.golangci.yml'
+      - 'go.mod'
+      - 'go.sum'
 
 permissions:
   contents: read
