--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
     tags:
       - 'v*'
   pull_request:
+    paths:
+      - '**.go'
+      - 'Dockerfile'
+      - 'Makefile'
 
 jobs:
   build:
