--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -3,7 +3,11 @@ name: Lint Code Base
 # Documentation:
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
 
-on: pull_request
+on:
+  pull_request:
+    paths:
+      - 'deploy/**'
+      - '.github/**'
 
 jobs:
   build:
