superlinter: Fix Failed to call GitHub Status API
Signed-off-by: Mario Trangoni <mjtrangoni@gmail.com>

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -13,6 +13,15 @@ jobs:
   build:
     name: Lint Code Base
     runs-on: ubuntu-latest
+
+    ############################################
+    # Grant status permission for MULTI_STATUS #
+    ############################################
+    permissions:
+      contents: read
+      packages: read
+      statuses: write
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
