--- a/deploy/cert-manager-webhook-hosting-de/values.yaml
+++ b/deploy/cert-manager-webhook-hosting-de/values.yaml
@@ -14,7 +14,7 @@ certManager:
 
 image:
   registry: ghcr.io
-  repository: vadimkim/cert-manager-webhook-hetzner
+  repository: josobrate/cert-manager-webhook-hosting-de
   # Overrides the image tag whose default is {{ printf "v%s" .Chart.AppVersion }}
   tag: ""
   pullPolicy: IfNotPresent
@@ -27,7 +27,7 @@ service:
   port: 443
 
 secretName:
-  - hetzner-secret
+  - hosting-de-secret
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
