--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -5,10 +5,10 @@ on:
       - master
   pull_request:
     paths:
-      - '**.go'
-      - '.golangci.yml'
-      - 'go.mod'
-      - 'go.sum'
+      - "**.go"
+      - ".golangci.yml"
+      - "go.mod"
+      - "go.sum"
 
 permissions:
   contents: read
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: "1.23"
           cache: false
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
@@ -31,5 +31,5 @@ jobs:
           # Require: The version of golangci-lint to use.
           # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
           # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
-          version: v1.55.2
+          version: v1.63.4
           args: --timeout=30m
