Adjust API group name

--- a/deploy/cert-manager-webhook-hetzner/values.yaml
+++ b/deploy/cert-manager-webhook-hetzner/values.yaml
@@ -1,12 +1,6 @@
-# The GroupName here is used to identify your company or business unit that
-# created this webhook.
-# For example, this may be "acme.mycompany.com".
-# This name will need to be referenced in each Issuer's `webhook` stanza to
-# inform cert-manager of where to send ChallengePayload resources in order to
-# solve the DNS01 challenge.
-# This group name should be **unique**, hence using your own company's domain
-# here is recommended.FROM golang:1.14.0-alpine AS build_deps
-groupName: acme.yourdomain.tld
+# The kubernetes api group under which the webhook will be exposed. There is no need to
+# modify this value unless you are facing a collision in your api services.
+groupName: hetzner.cert-mananger-webhook.noshoes.xyz
 
 certManager:
   namespace: cert-manager
